# EmbASP-Python

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  codeql.yml  publish-to-pypi.yml  python-package.yml
embasp/base/: input_program.py
embasp/languages/: mapper.py  predicate.py
embasp/languages/asp/: answer_set.py  answer_sets.py  asp_filter_option.py  asp_input_program.py  asp_mapper.py
embasp/languages/datalog/: datalog_input_program.py  datalog_mapper.py  minimal_model.py  minimal_models.py
embasp/languages/pddl/: pddl_input_program.py  pddl_mapper.py  plan.py
embasp/specializations/clingo/: clingo_answer_sets.py
embasp/specializations/dlv/: dlv_answer_sets.py  dlv_filter_option.py
embasp/specializations/dlv2/: dlv2_answer_sets.py
embasp/specializations/dlvhex/: dlvhex_answer_sets.py
embasp/specializations/idlv/: idlv_minimal_models.py
embasp/specializations/solver_planning_domains/: spd_plan.py
languages/asp/: answer_sets.py
languages/datalog/: datalog_input_program.py  datalog_mapper.py  minimal_model.py  minimal_models.py
parsers/asp/: asp_parser.py  asp_solvers_parser.py
parsers/asp/clingo/: clingo_parser_visitor_implementation.py
parsers/asp/dlv/: dlv_parser_visitor_implementation.py
parsers/asp/dlv2/: DLV2Lexer.py  DLV2Parser.py  DLV2ParserListener.py  (+2 more)
parsers/datalog/: datalog_data_collection.py  datalog_parser.py  datalog_solvers_parser.py
parsers/pddl/: pddl_parser.py  pddl_solvers_parser.py
specializations/idlv/: idlv_minimal_models.py
(+39 files in other folders)
